# theoryforge

./: .gitignore  00_FIRST_RESPONSE.md  09_PROMPT_CLAUDE_PAPER_THEORYFORGE_ARXIV.md  LICENSE  README.md  pyproject.toml
audits/: RELATED_WORK_MATRIX.md
case_studies/bang/: CORPUS_FREEZE.manifest.json  freeze.py
operators/: OPERATOR_API.md
paper/: theoryforge.tex
schema/: operator.schema.json
