[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "theoryforge"
version = "0.0.1"
description = "Operator-guided autonomous theory formation — the Discovery Plane of the Bourbaki Engine"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Maximiliano Lucius" }]

# NOTE (UNFROZEN): dependencies are the planned integration surface, not yet
# exercised. mirador / proofcontext are sibling checkouts under ../ ; they are
# resolved the same way ProofContext resolves MIRADOR (installed dist, env var,
# sibling src/, or vendored copy). Pinned versions are deferred to P1 (see
# 00_FIRST_RESPONSE.md §10) once the substrate adapters exist.
dependencies = [
  "jsonschema>=4.0",
  # "mirador",       # ../mirador  — cell IR / identity / event log / transitions
  # "proofcontext",  # ../proof-context — dependency-aware retrieval / Evidence Bundle
]

[project.optional-dependencies]
lab = ["sympy>=1.12", "numpy>=1.24"]   # exact-arithmetic symbolic laboratory
test = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
